# luyin_old

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  App.jsx  Dockerfile  README.md  README_DEPLOY.txt  build_base_image.sh  codex-pack-today.mjs  collect_test_complete_logs.sh  curl_ping.sh  deploy_app.sh  design-qa.md  docker-compose.dev.yml  docker-compose.image.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.test_complete.yml  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.cjs  export_app_image.sh  load_and_recreate_app.sh  mysql-init.sql  nodemon.json  open_tunnel.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postRecording.sh  prisma.config.ts  pyrightconfig.json  qwechat.html  start_dev.sh  start_dev_app_only.sh  start_dev_docker.sh  start_dev_nginx.sh  start_dev_rest.sh  (+13 more)
adminBackend/: .env.example  README.md  main.py  requirements.txt
adminClient/: .env.example  index.html  package-lock.json  package.json  vite.config.mjs
client/: .dockerignore  Dockerfile  Dockerfile.test  deploy.sh  index.html  nginx.conf  nginx.dev.conf  nginx.test.conf  package.json  pnpm-lock.yaml  scp.sh  test.conf  vite.config.mjs
docs/: ADMIN_INTEGRATION.md  企业微信录音H5完整结构文档.md
public/: WW_verify_MZ6eTkDh36YmAXrC.txt  manifest.webmanifest
py_server/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
py_server/agent/: config_data.py  knowledge_base.py  multi_agent.py  pgvector_store.py  product_agent.py  product_base.py  rag.py  router.py  sqlalchemy_history_store.py  vector_stores.py
server/: .dockerignore  (+22 more)
(+203 files in other folders)
