[project]
name = "py-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlacodegen>=4.0.3",
    "sqlalchemy[asyncio]>=2.0.50",
    "pgvector>=0.3.6,<0.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.14",
    "dashscope>=1.25.17",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "protobuf>=6.30.0",
    "pypdf>=6.13.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
